# Statistical_Modeling

./: .gitignore  README.md  ROADMAP.md  TODO.md  pyproject.toml
hooks/: post_gen_project.py
notebooks/: 01_Statistical_Modeling.ipynb
src/statistical_modeling/: __init__.py
src/statistical_modeling/config/: defaults.py  logging_config.py  paths.py
src/statistical_modeling/helper_modules/: audit_log.py  excel_output.py  read_all_quarters.py  read_data.py  write_meta_data_to_excel.py
