[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "Statistical_Modeling"
version = "0.1.0"
description = "Working through the book Training Systems Using Python Statistical Modeling by Curtis Miller on OReilly"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pat"}]
dependencies = [
  "openpyxl>=3.1.5",
  "pandas>=2.3.3",
  "pyarrow>=15.0",
  "numpy",
  "pyreadstat>=1.3.2",
  "python-pptx>=1.0.2",
  "mypy>=1.19.1",
  "ipykernel>=7.1.0",
  "matplotlib>=3.10.9",
  "requests>=2.32.5",
  "pycodestyle-magic>=0.5",
  "notebook>=7.5.6",
]

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "test" },
  "nbstripout>=0.6"
]
lint = [
  "ruff>=0.6",
]
test = [
  "pytest>=8",
]

# If you use a src/ layout:
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
